--- a/index.html
+++ b/index.html
@@ -21,26 +21,38 @@
       <div class="profile">
         <img class="profilepic" src="images/carlos.png" alt="profile-img">
         <h2>Hello.</h2>
-        <p class="intro">I am a game and web developer. I love video games, soccer, and playing guitar.</p>
+        <p class="intro">I am a Unity game developer based in Toronto, Canada. I love video games, soccer, and playing guitar. Growing up, I have always been tech-savvy and played a lot on the computer.
+          I started coding at the end of 2019 and have been coding ever since.</p>
       </div>
       <hr>
       <div class="skills">
-        <h2>My Skills</h2>
+        <h2>My Projects</h2>
         <div class="skill-row">
-          <img class="csharp" src="images/c-sharp.png" alt="csharp-img">
-          <h3>Game Development</h3>
-          <p>I started to learn to code when I took an introductory course in university, then I picked it up again in 2020. Over time, I have gained lots of experience developing websites and games.</p>
+          <img class="skill-left" src="images/asteroid-modified.png" alt="asteroid">
+          <h3>Asteroid Avoider</h3>
+          <a href="https://youtu.be/ifZUaCRFG3E">https://youtu.be/ifZUaCRFG3E</a>
+          <p>A space game where you dodge asteroids and survive as long as you can.</p>
         </div>
+        <hr>
         <div class="skill-row">
-          <img class="computer" src="images/webdev.jpg" alt="computer-img">
-          <h3>Web Development</h3>
-          <p>I started to learn to code when I took an introductory course in university, then I picked it up again in 2020. Over time, I have gained lots of experience developing websites and games.</p>
+          <img class="skill-right" src="images/driving-modified.png" alt="driving">
+          <h3>Simple Driving</h3>
+          <a href="https://youtu.be/MI5dab9rDf0">https://youtu.be/MI5dab9rDf0</a>
+          <p>Drive around the race track without crashing into anything.</p>
         </div>
+        <hr>
+        <div class="skill-row">
+          <img class="skill-left" src="images/RPG-modified.png" alt="asteroid">
+          <h3>Corrupt Kingdom</h3>
+          <a href="https://play.unity.com/mg/other/webgl-builds-303570">https://play.unity.com/mg/other/webgl-builds-303570</a>
+          <p>A medieval adventure RPG.</p>
+        </div>
+
       </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>For business enquiries.</h3>
+        <h3></h3>
         <p class="contact-message">Let's get coding!</p>
         <a class="btn" href="mailto:carlos.lee008@gmail.com">CONTACT ME</a>
       </div>
@@ -48,7 +60,7 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/carlos-lee-60928894">LinkedIn</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/carlos-lee-9903a9123">LinkedIn</a>
       <p class="copyright">© Carlos Lee.</p>
     </div>
 
